# architect

./: .gitignore  .gitmodules  README.md  build_house.py  build_one_floor.py  pyproject.toml  save_scene.py  setup.ps1  setup.sh  start.ps1  start.sh  test_roof.py
.claude/commands/: build.md
architect/: __init__.py  __main__.py  client.py  config.py  graph.py  state.py
architect/agents/: architect.py  builder.py  floor_planner.py  furnisher.py
architect/prompts/: architect.md  builder.md  building-lessons.md  floor_planner.md  furnisher.md
architect/tools/: editor.py
docs/superpowers/plans/: 2026-03-25-ai-architect-plan.md
docs/superpowers/specs/: 2026-03-25-ai-architect-design.md
editor/apps/editor/: bridge-relay.mjs  next.config.ts  package.json
editor/apps/editor/app/: layout.tsx  page.tsx
editor/apps/editor/public/demos/: demo_1.json
electron/: main.js  package-lock.json  package.json
tests/: test_client.py
