[project]
name = "architect"
version = "0.1.0"
description = "AI-powered building generator for Pascal Editor"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=0.3",
    "langgraph>=0.4",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.3",
    "websockets>=14.0",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
